// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.compute.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "resources/common/v1/common.proto";
import "resources/status/v1/status.proto";
// import "resources/provider/v1/provider.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/compute/v1;computev1";

// States of the host.
enum HostState {
  HOST_STATE_UNSPECIFIED = 0;
  HOST_STATE_DELETED = 2;
  HOST_STATE_ONBOARDED = 3;
  HOST_STATE_UNTRUSTED = 4;
  HOST_STATE_REGISTERED = 5;
}

// The type of BMC.
enum BaremetalControllerKind {
  BAREMETAL_CONTROLLER_KIND_UNSPECIFIED = 0;
  BAREMETAL_CONTROLLER_KIND_NONE = 1;
  BAREMETAL_CONTROLLER_KIND_IPMI = 2;
  BAREMETAL_CONTROLLER_KIND_VPRO = 3;
  BAREMETAL_CONTROLLER_KIND_PDU = 4;
}

// The host power state.
enum PowerState {
  POWER_STATE_UNSPECIFIED = 0;
  reserved 1; // Previously POWER_STATE_ERROR, removed in v3.1
  POWER_STATE_ON = 2;
  POWER_STATE_OFF = 3;
  POWER_STATE_SLEEP = 4;
  POWER_STATE_HIBERNATE = 5;
  POWER_STATE_RESET = 6;
  POWER_STATE_POWER_CYCLE = 7;
  POWER_STATE_RESET_REPEAT = 8; // For consecutive reset operations
}

// The policy for handling power commands.
enum PowerCommandPolicy {
  POWER_COMMAND_POLICY_UNSPECIFIED = 0;
  POWER_COMMAND_POLICY_IMMEDIATE = 1;
  POWER_COMMAND_POLICY_ORDERED = 2;
}

// The state of the AMT (Active Management Technology) component.
enum AmtState {
  AMT_STATE_UNSPECIFIED = 0;
  AMT_STATE_PROVISIONED = 1;
  AMT_STATE_UNPROVISIONED = 2;
  AMT_STATE_DISCONNECTED = 3;
}

enum AmtSku {
  AMT_SKU_UNSPECIFIED = 0;
  AMT_SKU_AMT = 1;
  AMT_SKU_ISM = 2;
}

// A Host resource.
message HostResource {
  // Resource ID, generated on Create.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^host-[0-9a-f]{8}$"
      max_len: 13
    }
  ];

  // The host name.
  string name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
      max_len: 50
    }
  ];

  // The desired state of the Host.
  HostState desired_state = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The current state of the Host.
  HostState current_state = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // ??????????????????????????????????
  // The provider associated with the host.
  //resources.provider.v1.ProviderResource provider = 9 [
  //  (google.api.field_behavior) = OUTPUT_ONLY
  //];

  // The note associated with the host.
  string note = 13 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 512
      pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"
    }
  ];

  // SMBIOS device serial number.
  string serial_number = 16 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The host UUID identifier; UUID is unique and immutable.
  string uuid = 17 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).string = {
      min_len: 0
      max_len: 36
      pattern: "^$|^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
    }
  ];


  // Kind of BMC.
  BaremetalControllerKind bmc_kind = 34 [(google.api.field_behavior) = OUTPUT_ONLY];
  // BMC IP address, such as "192.0.0.1".
  string bmc_ip = 35 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Hostname.
  string hostname = 43 [(google.api.field_behavior) = OUTPUT_ONLY];
  // System Product Name.
  string product_name = 44 [(google.api.field_behavior) = OUTPUT_ONLY];
  // BIOS Version.
  string bios_version = 46 [(google.api.field_behavior) = OUTPUT_ONLY];
  // BIOS Release Date.
  string bios_release_date = 47 [(google.api.field_behavior) = OUTPUT_ONLY];
  // BIOS Vendor.
  string bios_vendor = 48 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Desired power state of the host
  PowerState desired_power_state = 50 [(google.api.field_behavior) = OPTIONAL];
  // Current power state of the host
  PowerState current_power_state = 51 [(google.api.field_behavior) = OUTPUT_ONLY];
  string power_status = 52 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {max_len: 1024}
  ]; // textual message that describes the runtime status of Host power. Set by DM RM only.
  status.v1.StatusIndication power_status_indicator = 53 [(google.api.field_behavior) = OUTPUT_ONLY]; // Indicates dynamicity of the power_status. Set by DM RM only.
  uint32 power_status_timestamp = 54 [(google.api.field_behavior) = OUTPUT_ONLY]; // UTC timestamp when power_status was last changed. Set by DM RM only.
  PowerCommandPolicy power_command_policy = 55 [(google.api.field_behavior) = OPTIONAL]; // Power command policy of the host. By default, it is set to PowerCommandPolicy.POWER_COMMAND_POLICY_ORDERED.
  uint32 power_on_time = 56 [(google.api.field_behavior) = OUTPUT_ONLY]; // UTC timestamp when the host was powered on. Set by DM RM only.


  // textual message that describes the runtime status of Host. Set by RMs only.
  string host_status = 60 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {max_len: 1024}
  ];
  // Indicates interpretation of host_status. Set by RMs only.
  status.v1.StatusIndication host_status_indicator = 61 [(google.api.field_behavior) = OUTPUT_ONLY];
  // UTC timestamp when host_status was last changed. Set by RMs only.
  uint32 host_status_timestamp = 62 [(google.api.field_behavior) = OUTPUT_ONLY];

  // textual message that describes the onboarding status of Host. Set by RMs only.
  string onboarding_status = 63 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {max_len: 1024}
  ];
  // Indicates interpretation of onboarding_status. Set by RMs only.
  status.v1.StatusIndication onboarding_status_indicator = 64 [(google.api.field_behavior) = OUTPUT_ONLY];
  // UTC timestamp when onboarding_status was last changed. Set by RMs only.
  uint32 onboarding_status_timestamp = 65 [(google.api.field_behavior) = OUTPUT_ONLY];

  // textual message that describes the onboarding status of Host. Set by RMs only.
  string registration_status = 66 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {max_len: 1024}
  ];
  // Indicates interpretation of registration_status. Set by RMs only.
  status.v1.StatusIndication registration_status_indicator = 67 [(google.api.field_behavior) = OUTPUT_ONLY];
  // UTC timestamp when registration_status was last changed. Set by RMs only.
  uint32 registration_status_timestamp = 68 [(google.api.field_behavior) = OUTPUT_ONLY];



  // ////InstanceResource instance = 90 [(google.api.field_behavior) = OUTPUT_ONLY]; // ???????????????

  AmtSku amt_sku = 91 [(google.api.field_behavior) = OUTPUT_ONLY]; // coming from device introspection
  AmtState desired_amt_state = 92 [(google.api.field_behavior) = OPTIONAL]; // Desired AMT/vPRO state of the host
  AmtState current_amt_state = 93 [(google.api.field_behavior) = OUTPUT_ONLY]; // Current AMT/vPRO state of the host
  string amt_status = 94 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {max_len: 1024}
  ]; // coming from device introspection. Set only by the DM RM.
  status.v1.StatusIndication amt_status_indicator = 95 [(google.api.field_behavior) = OUTPUT_ONLY]; // Indicates dynamicity of the amt_status. Set by DM and OM RM only.
  uint32 amt_status_timestamp = 96 [(google.api.field_behavior) = OUTPUT_ONLY]; // UTC timestamp when amt_status was last changed. Set by DM and OM RM only.
  uint32 user_lvm_size = 97 [(google.api.field_behavior) = OUTPUT_ONLY]; // LVM size in GB.


  // The metadata associated with the host, represented by a list of key:value pairs.
  repeated resources.common.v1.MetadataItem metadata = 5003 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).repeated = {
        min_items: 0,
        max_items: 100,
    }
  ];
  // The metadata inherited by the host, represented by a list of key:value pairs, rendered by location and logical structures.
  repeated resources.common.v1.MetadataItem inherited_metadata = 5004 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Timestamps associated to the resource.
  resources.common.v1.Timestamps timestamps = 50100 [(google.api.field_behavior) = OUTPUT_ONLY];
}

